# usbmissileturret

./: .gitignore  client.py  common.py  dbturret_token  dropbox_share.py  espeak.py  facedetect.py  gif_creator.py  harvest.py  lightbox.py  mail.py  move_while_firing.patch  recog.py  recognize.py  remote.py  server.py  targeting.py  tester.py  usbturret.py  util.py
cpp_recognizer/: CMakeLists.txt  RecogServer.cpp  run_server.py  run_server.sh
